Fixing Chrome globalnav wrapping problem.

--- a/sites/all/themes/precipice/css/precipice-alpha-default-normal.css
+++ b/sites/all/themes/precipice/css/precipice-alpha-default-normal.css
@@ -99,6 +99,10 @@ nav.navigation {
 	display: inline-table;
 	vertical-align:middle;
 }
+	
+li.expanded, li.collapsed, li.leaf { /* fixing Chrome wrapping problem */
+	padding: 0.2em 0 0 0;
+}
 
 /* Front Page Header */
  
